--- a/src/components/Sections/experiences/Experiences.module.css
+++ b/src/components/Sections/experiences/Experiences.module.css
@@ -9,6 +9,9 @@
   flex-direction: column;
   gap: 82px;
 }
+.experiences.light {
+  color: #222;
+}
 .content {
   width: 100%;
   display: flex;
@@ -33,6 +36,7 @@
   max-width: 760px;
   font-size: 40px;
   font-weight: 200;
+  color: white;
 }
 .titleSkillsContainer {
   display: flex;
@@ -47,6 +51,7 @@
   gap: 32px;
   flex-direction: row;
 }
+
 .cardSkill {
   display: flex;
   min-height: 70px;
@@ -64,6 +69,9 @@
   -webkit-backdrop-filter: blur(5px);
   border: 1px solid rgba(0, 0, 0, 0.3);
 }
+.cardSkill.light {
+  background: rgba(255, 255, 255, 0.21);
+}
 .info {
   color: #43d24a;
   margin: 0;
@@ -72,6 +80,10 @@
   top: 1.1rem;
   font-size: 13px;
   font-weight: 400;
+}
+.info.light {
+  color: red;
+  font-weight: 500;
 }
 .cardSkill h4 {
   margin: 0;
