--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,3 +20,15 @@
 .header .logo {
   height: 62px;
 }
+
+@media screen and (max-width: 425px) {
+  .header ul li a {
+    font-size: 12px;
+  }
+  .header ul {
+    gap: 12px;
+  }
+  .header .logo {
+    height: 30px;
+  }
+}
