--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body {
   background-size: cover;
   background-position: center center;
   background-repeat: repeat;
+  width: 100vw;
   color: white;
   overflow-x: hidden;
   overflow-y: scroll;
