--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,9 +7,9 @@
     ),
     repeating-linear-gradient(#4500ff55, #4500ff);
   min-height: 100vh;
-  min-width: calc(100vw - 15px);
   display: flex;
   flex-direction: column;
+  width: 100vw;
   align-items: flex-start;
   justify-content: center;
   gap: 82px;
@@ -66,13 +66,11 @@
 .subtitle {
   font-size: 24px;
   text-align: center;
-  min-width: 800px;
-  max-width: 814px;
+  width: 70%;
 }
 
 .projects {
   min-height: 100vh;
-  max-width: calc(100vw - 15px);
   display: flex;
   justify-content: space-around;
   flex-direction: column;
@@ -141,24 +139,23 @@
 }
 
 .flexRow {
+  max-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 @media screen and (max-width: 425px) {
-  body {
-    overflow-x: hidden;
-  }
   .first {
+    padding-top: 40px;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 30px;
   }
   .first .title {
-    font-size: 28px;
-    max-width: 260px;
-    min-width: 260px;
+    font-size: 32px;
+
+    width: 80%;
     margin: 0 auto;
   }
   .first .info {
@@ -180,15 +177,22 @@
   }
   .subtitle {
     font-size: 12px;
+    max-width: 90%;
     width: 90%;
   }
   .swiper {
-    min-width: 280px;
+    min-width: 230px;
     max-width: 280px;
-    width: 280px;
+    width: 230px;
     margin: auto;
     background-position: center;
-    height: 380px;
+    min-height: 40px;
+  }
+  .swiper-wrapper {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
   }
 }
 
