--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,10 @@
 .header {
-  position: relative;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  min-width: calc(100vw - 15px);
+  justify-content: center;
+  max-width: calc(100vw - 15px);
+  width: calc(100vw - 15px);
 }
 
 .header ul {
