--- a/src/components/Sections/experiences/Experiences.module.css
+++ b/src/components/Sections/experiences/Experiences.module.css
@@ -56,6 +56,7 @@
   display: flex;
   min-height: 70px;
   min-width: 280px;
+  height: 150px;
   width: 100%;
   flex-direction: column;
   justify-content: flex-start;
@@ -156,8 +157,9 @@
     flex-direction: column;
   }
   .cardSkill {
-    width: 80%;
+    width: 270px;
     margin: 0 auto;
+    height: auto;
   }
   .chipsContainer {
     flex-wrap: wrap;
